Export release notes from multiple lists
+ Updated README
+ Updated packages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Norbert Eder <wpfnerd+nodejs@gmail.com>",
   "homepage": "https://github.com/devtyr/trello-releasenotes",
   "bugs": "https://github.com/devtyr/trello-releasenotes/issues",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
   "keywords": [
     "trello",
@@ -19,10 +19,8 @@
   "dependencies": {
     "trello": ">=0.0.8",
     "restler": ">=2.0.1",
-    "optimist": ">=0.3.4"
-  },
-  "scripts": {
-    "start": "node index.js -g [LISTNAME]"
+    "optimist": ">=0.3.4",
+    "async": ">=0.1.22"
   },
   "engines": {
     "node": ">= 0.6.0"
