Configure identifier for finding release note comments;
It's possible now to configure the identifier that is used to find card
comments having release notes.

Updated README

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
-  "applicationKey": "insert application key",
-  "userToken":      "insert user token",
-  "boardId":        "insert board id",
+  "applicationKey":    "insert application key",
+  "userToken":         "insert user token",
+  "boardId":           "insert board id",
+  "releaseIdentifier": "RELEASE:",
   "strings":        
 	  {
 	  	"header" :           "Release Notes for ",
