--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "author": "Norbert Eder <wpfnerd+nodejs@gmail.com>",
   "homepage": "https://github.com/devtyr/trello-releasenotes",
   "bugs": "https://github.com/devtyr/trello-releasenotes/issues",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MIT",
   "keywords": [
     "trello",
     "release",
     "notes",
-    "markdown"
+    "markdown",
+    "export"
   ],
   "repository": {
     "type": "git",
