--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "git://github.com/devtyr/trello-releasenotes.git"
   },
+  "scripts": {
+    "test": "node test/testrunner.js"
+  },
   "dependencies": {
     "trello": ">=0.0.8",
     "restler": ">=2.0.1",
@@ -26,5 +29,7 @@
   "engines": {
     "node": ">= 0.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodeunit": ">=0.7.4"
+  }
 }
