Integrated Mustache (mu2); inlcuded template

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "trello": ">=0.0.8",
     "restler": ">=2.0.1",
     "optimist": ">=0.3.4",
-    "async": ">=0.1.22"
+    "async": ">=0.1.22",
+    "mu2": ">=0.5.17"
   },
   "engines": {
     "node": ">= 0.6.0"
