--- a/settings.json
+++ b/settings.json
@@ -3,12 +3,15 @@
   "userToken":         "insert user token",
   "boardId":           "insert board id",
   "releaseIdentifier": "RELEASE:",
+  "template":          "default.template",
+  "linkTemplate":      "default.link.template",
+  "exportLinks":       true,
   "strings":        
 	  {
 	  	"header" :           "Release Notes for ",
 	  	"product":           "trello-releasenotes",
 	  	"version":           "Version",
-	  	"version_number":    "0.4.0",
+	  	"version_number":    "0.5.0",
 	  	"generated":         "Generated on",
 	  	"subheader":         "Items included in this release"
 	  }
