--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "author": "Norbert Eder <wpfnerd+nodejs@gmail.com>",
   "homepage": "https://github.com/devtyr/trello-releasenotes",
   "bugs": "https://github.com/devtyr/trello-releasenotes/issues",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "license": "MIT",
   "keywords": [
     "trello",
     "release",
     "notes",
     "markdown",
-    "export"
+    "export",
+    "templating"
   ],
   "repository": {
     "type": "git",
