Use only one template; can handle links as well now

--- a/templates/default.template
+++ b/templates/default.template
@@ -7,7 +7,12 @@
 ## {{subheader}}
 
 {{#data}}
+{{#link}}
+**[{{name}}]({{link}} "{{name}}")**
+{{/link}}
+{{^link}}
 **{{name}}**
+{{/link}}
 {{#labels}}  `{{name}}` {{/labels}}
 
 {{#releasenotes}}
