Configure export path; per default it's /export

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
   "releaseIdentifier": "RELEASE:",
   "template":          "default.template",
   "exportLinks":       true,
+  "exportPath":        "",
   "strings":        
 	  {
 	  	"header" :           "Release Notes for ",
